--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -217,7 +217,7 @@
     "\n",
     "plt.xlabel(\"time (s)\")\n",
     "plt.ylabel(\"displacement (m)\")\n",
-    "plt.title(\"A Very Messy and Unmeaningful Graph\")\n",
+    "plt.title(\"SMH\")\n",
     "\n",
     "\n",
     "\n",
