--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "import math\n",
     "\n",
     "\n",
-    "data_path = \"C:\\\\tools\\\\TrackerExcel\\\\PendulumTest.csv\"\n",
+    "data_path = \"D:\\\\Tools\\\\VSC\\\\Code\\\\Data-Analysis-Pull\\\\Data-Analysis\\\\PendulumTest.csv\"\n",
     "\n",
     "\n",
     "data = pd.read_csv(data_path)"
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "max     1.800000   0.195270   0.065960         NaN         NaN         NaN"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -228,14 +228,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.1111111111111112 0.8999999999999999 0.19527 6.977777777777779 0.1350259151907477 9.737876543209879\n"
+      "1.1111111111111112 0.8999999999999999 0.19527 6.977777777777779 9.737876543209879\n"
      ]
     }
    ],
@@ -243,6 +243,10 @@
     "# Effects of inertia and gravitional force will cancel therefor mass does not effect the period\n",
     "\n",
     "# Theta maximum 20 degree , if <20degree than the accurancy is 99% of that of the true value\n",
+    "\n",
+    "# Theta < 40 degree , accuracy is 97% of that of the true value\n",
+    "\n",
+    "# Theta < 70 degree , ccuracy is 90% of that of the true value\n",
     "\n",
     "cycles = 2\n",
     "total_time = np.max(time)\n",
@@ -264,19 +268,92 @@
     "\n",
     "angular_velocity = (2*pi)/period\n",
     "\n",
-    "theta_time = amplitude*(np.cos(((2*pi)/period))*(total_time/2))\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "\n",
-    "print(frequency,period,amplitude,angular_velocity,theta_time,g)"
+    "\n",
+    "print(frequency,period,amplitude,angular_velocity,g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "0.004500413753307621\n",
+      "0.009002177765767148\n",
+      "0.013502591519074769\n",
+      "0.01800300527238239\n",
+      "0.022504769284841922\n",
+      "0.027005183038149538\n",
+      "0.03150559679145716\n",
+      "0.03600736080391669\n",
+      "0.04050777455722431\n",
+      "0.04500818831053194\n",
+      "0.04950995232299146\n",
+      "0.054010366076299075\n",
+      "0.058510779829606695\n",
+      "0.06301254384206623\n",
+      "0.06751295759537385\n",
+      "0.07201337134868147\n",
+      "0.076515135361141\n",
+      "0.08101554911444862\n",
+      "0.08551596286775623\n",
+      "0.09001772688021577\n",
+      "0.09451814063352339\n",
+      "0.09901855438683102\n",
+      "0.10352031839929053\n",
+      "0.10802073215259815\n",
+      "0.11252114590590577\n",
+      "0.11702290991836531\n",
+      "0.12152332367167293\n",
+      "0.12602373742498055\n",
+      "0.13052550143744007\n",
+      "0.1350259151907477\n",
+      "0.13952632894405534\n",
+      "0.14402809295651486\n",
+      "0.14852850670982248\n",
+      "0.1530289204631301\n",
+      "0.15753068447558963\n",
+      "0.16203109822889725\n",
+      "0.16653151198220487\n",
+      "0.17103327599466436\n",
+      "0.175533689747972\n",
+      "0.1800341035012796\n",
+      "0.18453586751373918\n",
+      "0.18903628126704677\n",
+      "0.19353669502035442\n",
+      "0.19803845903281392\n",
+      "0.20253887278612154\n",
+      "0.2070392865394292\n",
+      "0.21154105055188868\n",
+      "0.2160414643051963\n",
+      "0.22054187805850392\n",
+      "0.22504364207096347\n",
+      "0.2295440558242711\n",
+      "0.2340444695775787\n",
+      "0.23854623359003824\n",
+      "0.24304664734334586\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in time :\n",
+    "    print(amplitude*(np.cos(((2*pi)/period))*(total_time/2)*t))\n",
+    "\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -290,12 +367,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "4575b3479d19997db204fee7d8ad6f418c2ab906615a63e86fab7a0d02658f9d"
+    "hash": "17dea3bdcbd9c9f965cb4bb5d89cb65f4d9e6b4fec0a640e3f1bef6fdbab73a0"
    }
   }
  },
