--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,8 +11,7 @@
     "import matplotlib.pyplot as plt\n",
     "import math\n",
     "\n",
-    "\n",
-    "data_path = \"D:\\\\Tools\\\\VSC\\\\Code\\\\Data-Analysis-Pull\\\\Data-Analysis\\\\PendulumTest.csv\"\n",
+    "data_path = \"C:\\\\tools\\\\TrackerExcel\\\\PendulumTest.csv\"\n",
     "\n",
     "\n",
     "data = pd.read_csv(data_path)"
@@ -20,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +140,7 @@
        "max     1.800000   0.195270   0.065960         NaN         NaN         NaN"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -279,75 +278,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0\n",
-      "0.004500413753307621\n",
-      "0.009002177765767148\n",
-      "0.013502591519074769\n",
-      "0.01800300527238239\n",
-      "0.022504769284841922\n",
-      "0.027005183038149538\n",
-      "0.03150559679145716\n",
-      "0.03600736080391669\n",
-      "0.04050777455722431\n",
-      "0.04500818831053194\n",
-      "0.04950995232299146\n",
-      "0.054010366076299075\n",
-      "0.058510779829606695\n",
-      "0.06301254384206623\n",
-      "0.06751295759537385\n",
-      "0.07201337134868147\n",
-      "0.076515135361141\n",
-      "0.08101554911444862\n",
-      "0.08551596286775623\n",
-      "0.09001772688021577\n",
-      "0.09451814063352339\n",
-      "0.09901855438683102\n",
-      "0.10352031839929053\n",
-      "0.10802073215259815\n",
-      "0.11252114590590577\n",
-      "0.11702290991836531\n",
-      "0.12152332367167293\n",
-      "0.12602373742498055\n",
-      "0.13052550143744007\n",
-      "0.1350259151907477\n",
-      "0.13952632894405534\n",
-      "0.14402809295651486\n",
-      "0.14852850670982248\n",
-      "0.1530289204631301\n",
-      "0.15753068447558963\n",
-      "0.16203109822889725\n",
-      "0.16653151198220487\n",
-      "0.17103327599466436\n",
-      "0.175533689747972\n",
-      "0.1800341035012796\n",
-      "0.18453586751373918\n",
-      "0.18903628126704677\n",
-      "0.19353669502035442\n",
-      "0.19803845903281392\n",
-      "0.20253887278612154\n",
-      "0.2070392865394292\n",
-      "0.21154105055188868\n",
-      "0.2160414643051963\n",
-      "0.22054187805850392\n",
-      "0.22504364207096347\n",
-      "0.2295440558242711\n",
-      "0.2340444695775787\n",
-      "0.23854623359003824\n",
-      "0.24304664734334586\n"
+      "90.04564930671381\n",
+      "85.775041443148\n",
+      "84.76613298098687\n",
+      "82.11983932495345\n",
+      "80.97630494163755\n",
+      "78.92111233436857\n",
+      "77.63785146157427\n",
+      "75.87220341735555\n",
+      "74.09078095574361\n",
+      "73.41785812314527\n",
+      "72.45870686779003\n",
+      "72.1066039522056\n",
+      "71.8338911211591\n",
+      "71.37179505258707\n",
+      "71.52496667229403\n",
+      "71.78230983168375\n",
+      "72.00697651768527\n",
+      "72.98627685351515\n",
+      "73.85739564081081\n",
+      "74.7366250062234\n",
+      "76.30275227956881\n",
+      "78.29679446840669\n",
+      "79.24173988588976\n",
+      "82.09859896067907\n",
+      "83.90225780212266\n",
+      "85.87264783523094\n",
+      "87.95679382907525\n",
+      "-90.04564930671381\n",
+      "-85.69521931906228\n",
+      "-84.65690207508091\n",
+      "-84.60392794051725\n",
+      "-82.35772475584409\n",
+      "-80.69635945116774\n",
+      "-78.94515823021165\n",
+      "-77.2000627975191\n",
+      "-76.22339521476329\n",
+      "-74.8883854310028\n",
+      "-74.47982143441538\n",
+      "-73.92590841583062\n",
+      "-73.60611188411868\n",
+      "-73.60611188411868\n",
+      "-73.36403013833632\n",
+      "-74.21217303828061\n",
+      "-74.56755679803754\n",
+      "-75.19308972800641\n",
+      "-75.97910582303884\n",
+      "-77.10148393241137\n",
+      "-79.13996726154423\n",
+      "-80.32214191368135\n",
+      "-81.83729669765525\n",
+      "-83.58244248260206\n",
+      "-85.97869100177253\n",
+      "-86.20532913062002\n",
+      "-85.05850891306991\n",
+      "-87.79268069336752\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Liam\\AppData\\Local\\Temp\\ipykernel_3392\\3707004980.py:6: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "  theta = math.atan(xdisplacement[index]/ydisplacement[index])\n"
      ]
     }
    ],
    "source": [
-    "for t in time :\n",
-    "    print(amplitude*(np.cos(((2*pi)/period))*(total_time/2)*t))\n",
-    "\n"
+    "for index in range(len(time)) :\n",
+    "    #print((90*180/pi) * math.cos(angular_velocity*time))\n",
+    "    \n",
+    "\n",
+    "    #amp = amplitude*(np.cos(((2*pi)/period))*(total_time/2)*t)\n",
+    "    theta = math.atan(xdisplacement[index]/ydisplacement[index])\n",
+    "    print(theta * 180/pi)\n",
+    "    \n",
+    "    "
    ]
   }
  ],
