--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "max     1.800000   0.195270   0.065960         NaN         NaN         NaN"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Liam\\AppData\\Local\\Temp\\ipykernel_3392\\3707004980.py:6: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "C:\\Users\\Liam\\AppData\\Local\\Temp\\ipykernel_3392\\580038551.py:6: RuntimeWarning: divide by zero encountered in double_scalars\n",
       "  theta = math.atan(xdisplacement[index]/ydisplacement[index])\n"
      ]
     }
@@ -358,8 +358,83 @@
     "\n",
     "    #amp = amplitude*(np.cos(((2*pi)/period))*(total_time/2)*t)\n",
     "    theta = math.atan(xdisplacement[index]/ydisplacement[index])\n",
+    "    \n",
     "    print(theta * 180/pi)\n",
     "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90.04585987261146\n",
+      "87.62159404966346\n",
+      "80.47651300096918\n",
+      "68.99961145352121\n",
+      "53.80741638608013\n",
+      "35.712185783341134\n",
+      "15.699065823522561\n",
+      "-5.159372483680747\n",
+      "-25.7460246322086\n",
+      "-44.94010569637117\n",
+      "-61.71438062011792\n",
+      "-75.16909582025698\n",
+      "-84.57174550289\n",
+      "-89.4206179768926\n",
+      "-89.4539059864298\n",
+      "-84.66979725532251\n",
+      "-75.32663170555863\n",
+      "-61.922931837548724\n",
+      "-45.18842605259633\n",
+      "-26.020743283669315\n",
+      "-5.445698346258041\n",
+      "15.416555757348972\n",
+      "35.44870330674054\n",
+      "53.57716068235142\n",
+      "68.81497276365006\n",
+      "80.34743322047589\n",
+      "87.5550429645452\n",
+      "90.04540306216413\n",
+      "87.68725611090811\n",
+      "80.60477625281905\n",
+      "69.18355006138046\n",
+      "54.037126150439995\n",
+      "35.97530591791771\n",
+      "15.981416604254406\n",
+      "-4.872994273216295\n",
+      "-25.4710447571216\n",
+      "-44.691329370047775\n",
+      "-61.50520323788944\n",
+      "-75.01079725628614\n",
+      "-84.47283567087558\n",
+      "-89.3864226902733\n",
+      "-89.48628638113901\n",
+      "-84.76698993332312\n",
+      "-75.48340331380464\n",
+      "-62.13085477418498\n",
+      "-45.43628791922187\n",
+      "-26.295197924160494\n",
+      "-5.731968955836448\n",
+      "15.133889272129858\n",
+      "35.18486116145463\n",
+      "53.34636137546833\n",
+      "68.62963586514302\n",
+      "80.21753822100499\n",
+      "87.48760353079209\n",
+      "90.04403263545697\n"
+     ]
+    }
+   ],
+   "source": [
+    "for t in time :\n",
+    "    theta = 1.5708*math.cos(angular_velocity*t)\n",
+    "    print(theta * 180/pi)\n",
     "    "
    ]
   }
