--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,31 @@
     "import matplotlib.pyplot as plt\n",
     "import math\n",
     "import operator\n",
+    "import sys\n",
     "from scipy.interpolate import interp1d\n",
     "pd.options.mode.chained_assignment = None  # default='warn'\n",
     "\n",
     "\n",
-    "astro_data = \"D:\\\\Tools\\\\VSC\\\\Code\\\\Data-Analysis-Pull\\\\Data-Analysis\\\\astrolab1.csv\"\n",
+    "#astro_data = \"D:\\\\Tools\\\\VSC\\\\Code\\\\Data-Analysis-Pull\\\\Data-Analysis\\\\astrolab1.csv\"\n",
     "\n",
-    "data_path = \"D:\\\\Tools\\\\VSC\\\\Code\\\\Data-Analysis-Pull\\\\Data-Analysis\\\\lab-smh-a-dataset1.csv\"\n",
+    "#data_path = \"D:\\\\Tools\\\\VSC\\\\Code\\\\Data-Analysis-Pull\\\\Data-Analysis\\\\lab-smh-a-dataset1.csv\"\n",
     "\n",
-    "data_path2 = \"D:\\\\Tools\\\\VSC\\\\Code\\\\Data-Analysis-Pull\\\\Data-Analysis\\\\lab-smh-a-dataset2.csv\"\n",
+    "#data_path2 = \"D:\\\\Tools\\\\VSC\\\\Code\\\\Data-Analysis-Pull\\\\Data-Analysis\\\\lab-smh-a-dataset2.csv\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "astro_data = \"C:\\\\Users\\\\Liam\\\\sourceVSC\\\\repos\\\\Data-Analysis\\\\astrolab1.csv\"\n",
+    "\n",
+    "data_path = \"C:\\\\Users\\\\Liam\\\\sourceVSC\\\\repos\\\\Data-Analysis\\\\lab-smh-a-dataset1.csv\"\n",
+    "\n",
+    "data_path2 = \"C:\\\\Users\\\\Liam\\\\sourceVSC\\\\repos\\\\Data-Analysis\\\\lab-smh-a-dataset2.csv\"\n",
+    "\n",
+    "data_path3 = \"C:\\\\Users\\\\Liam\\\\sourceVSC\\\\repos\\\\Data-Analysis\\\\pm-2.csv\"\n",
     "\n",
     "astrodata = pd.read_csv(astro_data)\n",
+    "\n",
+    "data_pm1 = pd.read_csv(data_path3)\n",
     "\n",
     "data = pd.read_csv(data_path)\n",
     "\n",
@@ -30,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +138,7 @@
        "max      9.390000    0.404000  -22.300000"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +149,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Time (s)</th>\n",
+       "      <th>X position (m)</th>\n",
+       "      <th>Y position (m)</th>\n",
+       "      <th>Unnamed: 3</th>\n",
+       "      <th>Unnamed: 4</th>\n",
+       "      <th>Unnamed: 5</th>\n",
+       "      <th>Unnamed: 6</th>\n",
+       "      <th>Unnamed: 7</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>13.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.100000</td>\n",
+       "      <td>0.178731</td>\n",
+       "      <td>0.157764</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.064907</td>\n",
+       "      <td>0.117179</td>\n",
+       "      <td>0.082515</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.050000</td>\n",
+       "      <td>0.087795</td>\n",
+       "      <td>0.107191</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.100000</td>\n",
+       "      <td>0.178652</td>\n",
+       "      <td>0.180694</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>0.150000</td>\n",
+       "      <td>0.269510</td>\n",
+       "      <td>0.227654</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>0.361388</td>\n",
+       "      <td>0.243988</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Time (s)  X position (m)  Y position (m)  Unnamed: 3  Unnamed: 4  \\\n",
+       "count  13.000000       13.000000       13.000000         0.0         0.0   \n",
+       "mean    0.100000        0.178731        0.157764         NaN         NaN   \n",
+       "std     0.064907        0.117179        0.082515         NaN         NaN   \n",
+       "min     0.000000        0.000000        0.000000         NaN         NaN   \n",
+       "25%     0.050000        0.087795        0.107191         NaN         NaN   \n",
+       "50%     0.100000        0.178652        0.180694         NaN         NaN   \n",
+       "75%     0.150000        0.269510        0.227654         NaN         NaN   \n",
+       "max     0.200000        0.361388        0.243988         NaN         NaN   \n",
+       "\n",
+       "       Unnamed: 5  Unnamed: 6  Unnamed: 7  \n",
+       "count         0.0         0.0         0.0  \n",
+       "mean          NaN         NaN         NaN  \n",
+       "std           NaN         NaN         NaN  \n",
+       "min           NaN         NaN         NaN  \n",
+       "25%           NaN         NaN         NaN  \n",
+       "50%           NaN         NaN         NaN  \n",
+       "75%           NaN         NaN         NaN  \n",
+       "max           NaN         NaN         NaN  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_pm1.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +412,7 @@
        "max    26.00000  217.000000  28.000000  19.200000"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +648,7 @@
        "-114.90152640100712"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,11 +658,18 @@
     "\n",
     "gradient"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -502,12 +683,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "17dea3bdcbd9c9f965cb4bb5d89cb65f4d9e6b4fec0a640e3f1bef6fdbab73a0"
+    "hash": "4575b3479d19997db204fee7d8ad6f418c2ab906615a63e86fab7a0d02658f9d"
    }
   }
  },
