--- a/Simple Harmonic Motion - B.ipynb
+++ b/Simple Harmonic Motion - B.ipynb
@@ -22,13 +22,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = \"C:\\\\tools\\\\TrackerExcel\\\\smhb.csv\"\n",
+    "data = \"C:\\\\Users\\\\Liam\\\\sourceVSC\\\\repos\\\\Data-Analysis\\\\data\\\\smhb.csv\"\n",
     "\n",
-    "data = pd.read_csv(data)\n",
-    "\n",
-    "data2 = \"C:\\\\tools\\\\TrackerExcel\\\\smhb2.csv\"\n",
-    "\n",
-    "data2 = pd.read_csv(data2)"
+    "data = pd.read_csv(data)"
    ]
   },
   {
@@ -169,16 +165,12 @@
    "source": [
     "ypos = data['y']\n",
     "time = data['t']\n",
-    "xpos = data['x']\n",
-    "\n",
-    "ypos2 = data2['y']\n",
-    "time2 = data2['t']\n",
-    "xpos2 = data2['x']"
+    "xpos = data['x']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -208,22 +200,14 @@
     "plt.xlabel(\"Time (s)\")\n",
     "plt.ylabel(\"X Displacement from origin (m)\")\n",
     "\n",
-    "#polynomial fit with degree = 2\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "#add line of best fit to plot\n",
-    "#plt.plot(x, a*x**4 + b*x**3 + c*x**2 + d*x + e,color='orange')\n",
-    "#plt.text(0.1, 0, 'y = '+'{:.2f}'.format(d)+'x^2 + '+'{:.2f}'.format(e)+' x + '+'{:.2f}'.format(f),size=8,color='orange')\n",
     "plt.savefig(\"pendulumtrack.PNG\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +216,7 @@
        "9.869604401089358"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
