--- a/Simple Harmonic Motion - A.ipynb
+++ b/Simple Harmonic Motion - A.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,15 +13,18 @@
     "import operator\n",
     "import sys\n",
     "from scipy.interpolate import interp1d\n",
-    "pd.options.mode.chained_assignment = None  # default='warn'\n",
+    "pd.options.mode.chained_assignment = None  # default='warn'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_path = \"C:\\\\Users\\\\Liam\\\\sourceVSC\\\\repos\\\\Data-Analysis\\\\data\\\\Simple-Harmonic-A.csv\"\n",
     "\n",
-    "data_path = \"C:\\\\Users\\\\Liam\\\\sourceVSC\\\\repos\\\\Data-Analysis\\\\data\\\\lab-smh-a-dataset1.csv\"\n",
-    "\n",
-    "data_path2 = \"C:\\\\Users\\\\Liam\\\\sourceVSC\\\\repos\\\\Data-Analysis\\\\data\\\\lab-smh-a-dataset2.csv\"\n",
-    "\n",
-    "data_path3 = \"C:\\\\Users\\\\Liam\\\\sourceVSC\\\\repos\\\\Data-Analysis\\\\data\\\\pm-2.csv\"\n",
-    "\n",
-    "data_pm1 = pd.read_csv(data_path3)\n",
+    "data_path2 = \"C:\\\\Users\\\\Liam\\\\sourceVSC\\\\repos\\\\Data-Analysis\\\\data\\\\Simple-Harmonic-A-2.csv\"\n",
     "\n",
     "data = pd.read_csv(data_path)\n",
     "\n",
@@ -30,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
